--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -349,12 +349,12 @@ add_library(wi4mpi_INTEL_OMPI SHARED ${SOURCE_WI4MPI_PRELOAD})
 add_library(wi4mpi_OMPI_INTEL SHARED ${SOURCE_WI4MPI_PRELOAD})
 add_library(wi4mpi_OMPI_OMPI SHARED ${SOURCE_WI4MPI_PRELOAD})
 #Empty libraries
-set(LIST_FAKECXX mpicxx mpi_cxx)
-set(LIST_FAKECXX_SOEXT so.1 so.4 so.5 so.12 so.20)
 set(LIST_FAKEINTEL mpi mpifort mpigf mpi_mt)
 set(LIST_FAKEINTEL_SOEXT so.4 so.5 so.12)
 set(LIST_FAKEOMPI mpi mpi_mpifh mpi_usempifh08 mpi_usempi_ignore_tkr)
 set(LIST_FAKEOMPI_SOEXT so.1 so.20)
+set(LIST_FAKECXX mpicxx mpi_cxx)
+set(LIST_FAKECXX_SOEXT ${LIST_FAKEINTEL_SOEXT} ${LIST_FAKEOMPI_SOEXT})
 foreach(LIB ${LIST_FAKECXX})
     foreach(SOEXT ${LIST_FAKECXX_SOEXT})
         add_library(${LIB}.${SOEXT} SHARED ${SOURCE_WI4MPI_EMPTY})
