--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,7 @@ file(GLOB_RECURSE SOURCE_WI4MPI_INTERFACE
     interface/gen/mpi_translation_c.c
     interface/gen/mpi_translation_fort.c
     interface/gen/c2f_f2c.c
+    common/helper.c
     common/override.c
     common/mpi_translation_c2f_f2c_init.c
     common/engine.c      
@@ -37,6 +38,7 @@ file(GLOB SOURCE_WI4MPI_PRELOAD
     preload/gen/mpi_translation_fort.c
     preload/gen/c2f_f2c.c
     common/override.c
+    common/helper.c
     common/mpi_translation_c2f_f2c_init.c
     common/engine.c
     common/engine_fn.c
