--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,7 @@ file(GLOB_RECURSE SOURCE_WI4MPI_INTERFACE
     interface/gen/mpi_translation_fort.c
     interface/gen/c2f_f2c.c
     common/helper.c
+    common/debug_printer.c
     common/override.c
     common/mpi_translation_c2f_f2c_init.c
     common/engine.c      
@@ -39,6 +40,7 @@ file(GLOB SOURCE_WI4MPI_PRELOAD
     preload/gen/c2f_f2c.c
     common/override.c
     common/helper.c
+    common/debug_printer.c
     common/mpi_translation_c2f_f2c_init.c
     common/engine.c
     common/engine_fn.c
