interface: src/CMakelist, add MPICH support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -61,6 +61,7 @@ file(GLOB SOURCE_WI4MPI_PROFILING
 
 add_library(wi4mpi_profiling_OMPI SHARED ${SOURCE_WI4MPI_PROFILING})
 add_library(wi4mpi_profiling_INTEL SHARED ${SOURCE_WI4MPI_PROFILING})
+add_library(wi4mpi_profiling_MPICH SHARED ${SOURCE_WI4MPI_PROFILING})
 add_library(wi4mpi_profiling_MPC SHARED ${SOURCE_WI4MPI_PROFILING})
 
 target_include_directories(wi4mpi_profiling_OMPI 
@@ -69,6 +70,9 @@ target_include_directories(wi4mpi_profiling_OMPI
 target_include_directories(wi4mpi_profiling_INTEL
                                                      PRIVATE common
                                                      PRIVATE interface/header/_INTEL)
+target_include_directories(wi4mpi_profiling_MPICH
+                                                     PRIVATE common
+                                                     PRIVATE interface/header/_MPICH)
 target_include_directories(wi4mpi_profiling_MPC
                                                      PRIVATE common
                                                      PRIVATE
@@ -78,6 +82,9 @@ set_target_properties(wi4mpi_profiling_OMPI
                                             PROPERTIES
                                             COMPILE_FLAGS "${WI4MPI_FLAGS}")
 set_target_properties(wi4mpi_profiling_INTEL 
+                                            PROPERTIES
+                                            COMPILE_FLAGS "${WI4MPI_FLAGS}")
+set_target_properties(wi4mpi_profiling_MPICH 
                                             PROPERTIES
                                             COMPILE_FLAGS "${WI4MPI_FLAGS}")
 set_target_properties(wi4mpi_profiling_MPC 
@@ -92,6 +99,11 @@ install(TARGETS
 )
 install(TARGETS 
         wi4mpi_profiling_INTEL
+        LIBRARY DESTINATION lib
+        PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
+)
+install(TARGETS 
+        wi4mpi_profiling_MPICH
         LIBRARY DESTINATION lib
         PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
 )
@@ -111,18 +123,21 @@ install(TARGETS
 add_library(mpi SHARED ${SOURCE_WI4MPI_SO})
 add_library(wi4mpi_OMPI SHARED ${SOURCE_WI4MPI_INTERFACE}) 
 add_library(wi4mpi_INTEL SHARED  ${SOURCE_WI4MPI_INTERFACE})
+add_library(wi4mpi_MPICH SHARED  ${SOURCE_WI4MPI_INTERFACE})
 add_library(wi4mpi_MPC SHARED  ${SOURCE_WI4MPI_INTERFACE})
 add_library(mpi_mod MODULE ${SOURCE_WI4MPI_MODULE})
 
 add_library(mpi_a STATIC ${SOURCE_WI4MPI_SO})
 add_library(wi4mpi_OMPI_a STATIC ${SOURCE_WI4MPI_INTERFACE}) 
 add_library(wi4mpi_INTEL_a STATIC  ${SOURCE_WI4MPI_INTERFACE})
+add_library(wi4mpi_MPICH_a STATIC  ${SOURCE_WI4MPI_INTERFACE})
 add_library(wi4mpi_MPC_a STATIC  ${SOURCE_WI4MPI_INTERFACE})
 
 #dependencies
 #-----------
 
 add_dependencies(mpi_a wi4mpi_INTEL_a)
+add_dependencies(mpi_a wi4mpi_MPICH_a)
 add_dependencies(mpi_a wi4mpi_OMPI_a)
 add_dependencies(mpi_a wi4mpi_MPC_a)
 
@@ -138,6 +153,10 @@ target_include_directories(wi4mpi_INTEL
                            PRIVATE common
                            PRIVATE interface/header/_INTEL
                           )
+target_include_directories(wi4mpi_MPICH
+                           PRIVATE common
+                           PRIVATE interface/header/_MPICH
+                          )
 target_include_directories(wi4mpi_MPC
                            PRIVATE common
                            PRIVATE interface/header/_MPC
@@ -151,6 +170,10 @@ target_include_directories(wi4mpi_OMPI_a
 target_include_directories(wi4mpi_INTEL_a
                            PRIVATE common
                            PRIVATE interface/header/_INTEL
+                          )
+target_include_directories(wi4mpi_MPICH_a
+                           PRIVATE common
+                           PRIVATE interface/header/_MPICH
                           )
 target_include_directories(wi4mpi_MPC_a
                            PRIVATE common
@@ -173,34 +196,7 @@ set_target_properties(wi4mpi_INTEL
                       PROPERTIES
                       COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_INTEL -D_GNU_SOURCE"
                      )
-set_target_properties(wi4mpi_MPC
-                      PROPERTIES
-                      COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_MPC -D_GNU_SOURCE"
-                     )
-
-set_target_properties(mpi_a
-                      PROPERTIES
-                      COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -DWI4MPI_STATIC"
-                     )
-set_target_properties(wi4mpi_OMPI_a
-                      PROPERTIES
-                      COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_OMPI -D__MPI__COMPILE__ -D_GNU_SOURCE -DWI4MPI_STATIC"
-                     )
-set_target_properties(wi4mpi_INTEL_a
-                      PROPERTIES
-                      COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_INTEL -D_GNU_SOURCE -DWI4MPI_STATIC"
-                     )
-set_target_properties(wi4mpi_MPC_a
-                      PROPERTIES
-                      COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_MPC -D_GNU_SOURCE -DWI4MPI_STATIC"
-                     )
-endif()
-if(CMAKE_C_COMPILER STREQUAL "gcc") 
-set_target_properties(wi4mpi_OMPI
-                      PROPERTIES
-                      COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_OMPI -D__MPI__COMPILE__ -D_GNU_SOURCE"
-                     )
-set_target_properties(wi4mpi_INTEL
+set_target_properties(wi4mpi_MPICH
                       PROPERTIES
                       COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_INTEL -D_GNU_SOURCE"
                      )
@@ -221,6 +217,49 @@ set_target_properties(wi4mpi_INTEL_a
                       PROPERTIES
                       COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_INTEL -D_GNU_SOURCE -DWI4MPI_STATIC"
                      )
+set_target_properties(wi4mpi_MPICH_a
+                      PROPERTIES
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_INTEL -D_GNU_SOURCE -DWI4MPI_STATIC"
+                     )
+set_target_properties(wi4mpi_MPC_a
+                      PROPERTIES
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_MPC -D_GNU_SOURCE -DWI4MPI_STATIC"
+                     )
+endif()
+if(CMAKE_C_COMPILER STREQUAL "gcc") 
+set_target_properties(wi4mpi_OMPI
+                      PROPERTIES
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_OMPI -D__MPI__COMPILE__ -D_GNU_SOURCE"
+                     )
+set_target_properties(wi4mpi_INTEL
+                      PROPERTIES
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_INTEL -D_GNU_SOURCE"
+                     )
+set_target_properties(wi4mpi_MPICH
+                      PROPERTIES
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_INTEL -D_GNU_SOURCE"
+                     )
+set_target_properties(wi4mpi_MPC
+                      PROPERTIES
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_MPC -D_GNU_SOURCE"
+                     )
+
+set_target_properties(mpi_a
+                      PROPERTIES
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -DWI4MPI_STATIC"
+                     )
+set_target_properties(wi4mpi_OMPI_a
+                      PROPERTIES
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_OMPI -D__MPI__COMPILE__ -D_GNU_SOURCE -DWI4MPI_STATIC"
+                     )
+set_target_properties(wi4mpi_INTEL_a
+                      PROPERTIES
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_INTEL -D_GNU_SOURCE -DWI4MPI_STATIC"
+                     )
+set_target_properties(wi4mpi_MPICH_a
+                      PROPERTIES
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_INTEL -D_GNU_SOURCE -DWI4MPI_STATIC"
+                     )
 set_target_properties(wi4mpi_MPC_a
                       PROPERTIES
                       COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_MPC -D_GNU_SOURCE -DWI4MPI_STATIC"
@@ -232,6 +271,10 @@ set_target_properties(wi4mpi_OMPI
                       COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -c11 -D_OMPI -D__MPI__COMPILE__ -D_GNU_SOURCE"
                      )
 set_target_properties(wi4mpi_INTEL
+                      PROPERTIES
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -c11 -D_INTEL -D_GNU_SOURCE"
+                     )
+set_target_properties(wi4mpi_MPICH
                       PROPERTIES
                       COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -c11 -D_INTEL -D_GNU_SOURCE"
                      )
@@ -252,6 +295,10 @@ set_target_properties(wi4mpi_INTEL_a
                       PROPERTIES
                       COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -c11 -D_INTEL -D_GNU_SOURCE -DWI4MPI_STATIC"
                      )
+set_target_properties(wi4mpi_MPICH_a
+                      PROPERTIES
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -c11 -D_INTEL -D_GNU_SOURCE -DWI4MPI_STATIC"
+                     )
 set_target_properties(wi4mpi_MPC_a
                       PROPERTIES
                       COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -c11 -D_MPC -D_GNU_SOURCE -DWI4MPI_STATIC"
@@ -263,6 +310,10 @@ set_target_properties(wi4mpi_OMPI
                       COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_OMPI -D__MPI__COMPILE__ -D_GNU_SOURCE"
                      )
 set_target_properties(wi4mpi_INTEL
+                      PROPERTIES
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_INTEL -D_GNU_SOURCE"
+                     )
+set_target_properties(wi4mpi_MPICH
                       PROPERTIES
                       COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_INTEL -D_GNU_SOURCE"
                      )
@@ -280,6 +331,10 @@ set_target_properties(wi4mpi_OMPI_a
                       COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_OMPI -D__MPI__COMPILE__ -D_GNU_SOURCE -DWI4MPI_STATIC"
                      )
 set_target_properties(wi4mpi_INTEL_a
+                      PROPERTIES
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_INTEL -D_GNU_SOURCE -DWI4MPI_STATIC"
+                     )
+set_target_properties(wi4mpi_MPICH_a
                       PROPERTIES
                       COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -D_INTEL -D_GNU_SOURCE -DWI4MPI_STATIC"
                      )
@@ -301,9 +356,11 @@ endif()
 
 target_link_libraries(wi4mpi_OMPI ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries(wi4mpi_INTEL ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(wi4mpi_MPICH ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries(wi4mpi_MPC ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries(wi4mpi_OMPI_a ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries(wi4mpi_INTEL_a ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(wi4mpi_MPICH_a ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries(wi4mpi_MPC_a ${CMAKE_THREAD_LIBS_INIT})
 
 #Custom command
@@ -313,6 +370,11 @@ message(status ${CMAKE_CURRENT_BINARY_DIR})
 add_custom_command(TARGET wi4mpi_INTEL_a 
                     POST_BUILD
                    COMMAND  ${CMAKE_SOURCE_DIR}/scripts/rename_sym.sh libwi4mpi_INTEL_a.a "INTEL"
+                   #WORKING_DIRECTORY ${CMAKE_BUILD_FILES_DIRECTORY}
+                    )
+add_custom_command(TARGET wi4mpi_MPICH_a 
+                    POST_BUILD
+                   COMMAND  ${CMAKE_SOURCE_DIR}/scripts/rename_sym.sh libwi4mpi_MPICH_a.a "MPICH"
                    #WORKING_DIRECTORY ${CMAKE_BUILD_FILES_DIRECTORY}
                     )
 message(status ${CMAKE_CURRENT_BINARY_DIR})
@@ -332,7 +394,7 @@ add_custom_command(TARGET wi4mpi_MPC_a
 message(status ${CMAKE_CURRENT_BINARY_DIR})
 add_custom_command(TARGET mpi_a 
                 POST_BUILD
-                COMMAND ${CMAKE_SOURCE_DIR}/scripts/assemble_sym.sh libmpi.a libmpi_a.a libwi4mpi_INTEL_a.a libwi4mpi_OMPI_a.a libwi4mpi_MPC_a.a
+                COMMAND ${CMAKE_SOURCE_DIR}/scripts/assemble_sym.sh libmpi.a libmpi_a.a libwi4mpi_INTEL_a.a libwi4mpi_MPICH_a.a libwi4mpi_OMPI_a.a libwi4mpi_MPC_a.a
                     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
                 )
 
@@ -528,6 +590,7 @@ list(APPEND LIST_INTERNAL_INTERFACE_HEADER_O_M "${CMAKE_CURRENT_SOURCE_DIR}/inte
 
 install(FILES ${LIST_INTERNAL_INTERFACE_HEADER_O_O} DESTINATION INTERNAL/interface/include/_OMPI)
 install(FILES ${LIST_INTERNAL_INTERFACE_HEADER_O_I} DESTINATION INTERNAL/interface/include/_INTEL)
+install(FILES ${LIST_INTERNAL_INTERFACE_HEADER_O_I} DESTINATION INTERNAL/interface/include/_MPICH)
 install(FILES ${LIST_INTERNAL_INTERFACE_HEADER_O_M} DESTINATION INTERNAL/interface/include/_MPC)
 #PRELOAD
     #OMPI_OMPI
@@ -583,6 +646,14 @@ foreach(LIB ${LIST_FAKEINTEL})
                 )
     endforeach(SOEXT)
 endforeach(LIB)
+foreach(LIB ${LIST_FAKEINTEL})
+    foreach(SOEXT ${LIST_FAKEINTEL_SOEXT})
+        install(FILES ${CMAKE_BINARY_DIR}/src/lib${LIB}.${SOEXT}.so DESTINATION libexec/wi4mpi/fakelibMPICH
+                RENAME lib${LIB}.${SOEXT}
+                PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
+                )
+    endforeach(SOEXT)
+endforeach(LIB)
 foreach(LIB ${LIST_FAKEOMPI})
     foreach(SOEXT ${LIST_FAKEOMPI_SOEXT})
         install(FILES ${CMAKE_BINARY_DIR}/src/lib${LIB}.${SOEXT}.so DESTINATION libexec/wi4mpi/fakelibOMPI
@@ -607,6 +678,11 @@ install(TARGETS
 install(TARGETS
         wi4mpi_INTEL
         LIBRARY DESTINATION lib_INTEL
+                PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
+)
+install(TARGETS
+        wi4mpi_MPICH
+        LIBRARY DESTINATION lib_MPICH
                 PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
 )
 install(TARGETS
